--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="canonical" href="https://chinadata.store/" />
   <meta name="google-site-verification" content="vCKi-MB9iWmbXzsX4G7E-aI-jvOHrdf6uojJT8iLSIs" />
   <meta name="google-site-verification" content="HBG7SaS-DmFFiYnfI-vT2LOdw3gM2AK3wbmnixc4zR8" />
-
+<meta name="google-site-verification" content="vq9yi3rh26W0cOTHm-arJBcnX3Oda0tFr0N9lCMUx6Q" />
   <!-- Open Graph -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="ChinaData Store | ข่าวสาร & ประกาศ" />
